@@ -1,5 +1,10 @@
 2005-01-31  Nick Clifton  <nickc@redhat.com>
 
+	* as.c (parse_args): Bump copyright date reported by --version to
+	2005.
+
+2005-01-31  Nick Clifton  <nickc@redhat.com>
+
 	* configure.tgt: Remove obsolete targets m68k-lynxos, sparc-lynxos
 	and vax-vms.
 
