@@ -1,3 +1,7 @@
+2005-01-31  Nick Clifton  <nickc@redhat.com>
+
+	* version.c (print_version): Bump the copyright date to 2005.
+
 2005-01-25  Alan Modra  <amodra@bigpond.net.au>
 
 	* nm.c (display_rel_file): Read dynamic syms before calling
